# Gzero

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: TaskProcessor.cpp.5B4E81A35E9085FF.idx  TaskProcessor.h.6F4463725D8ADD19.idx
Algos/: CMakeLists.txt  CommonCmake.txt
Algos/Bokeh/: BokehAlgorithm.cpp  BokehAlgorithm.h  CMakeLists.txt
Algos/Filter/: CMakeLists.txt  FilterAlgorithm.cpp  FilterAlgorithm.h
Algos/Hdr/: CMakeLists.txt  HDRAlgorithm.cpp  HDRAlgorithm.h  HdrAlgorithm.cpp  HdrAlgorithm.h
Algos/Ldc/: CMakeLists.txt  LdcAlgorithm.cpp  LdcAlgorithm.h
Algos/MandelbrotSet/: CMakeLists.txt  MandelbrotSet.cpp  MandelbrotSet.h
Algos/Nop/: CMakeLists.txt  NopAlgorithm.cpp  NopAlgorithm.h
Algos/SwJpeg/: CMakeLists.txt  SwJpeg.cpp  SwJpeg.h
Algos/WaterMark/: CMakeLists.txt  WaterMarkAlgorithm.cpp  WaterMarkAlgorithm.h
Config/: FilterAlgorithm.config  SwJpegAlgorithm.config  WaterMarkAlgorithm.config
Utils/: CMakeLists.txt
Utils/include/: ConfigParser.h  EventHandlerThread.h  ImageUtils.h  KpiMonitor.h  Log.h  RequestMonitor.h  Task.h  TaskQueue.h  ThreadWrapper.h  Utils.h
Utils/src/: ConfigParser.cpp  KpiMonitor.cpp  Log.cpp  RequestMonitor.cpp  TaskQueue.cpp  ThreadWrapper.cpp  Utils.cpp
Utils/tests/: CMakeLists.txt  test_TaskQueue.cpp
include/: AlgoBase.h  AlgoDecisionManager.h  AlgoDefs.h  AlgoInterface.h  AlgoLibraryLoader.h  AlgoMetadata.h  AlgoNodeManager.h  AlgoPipeline.h  AlgoRequest.h  AlgoSession.h  Interface.h  Watchdog.h
report/: Makefile  output0.raw  report.sh  test_results.html  test_results.xml
res/: tsukuba_l.yuv  tsukuba_r.yuv
src/: AlgoBase.cpp  AlgoDecisionManager.cpp  AlgoInterface.cpp  AlgoLibraryLoader.cpp  AlgoMetadata.cpp  AlgoNodeManager.cpp  AlgoPipeline.cpp  AlgoRequest.cpp  AlgoSession.cpp  Interface.cpp  Watchdog.cpp
test-server/: package-lock.json  package.json  server.js
test-server/public/: index.html
testApp/: CMakeLists.txt  main.cpp
testApp/include/: AlgoInterfaceManager.h  Renderer.h
testApp/src/: AlgoInterfaceManager.cpp  Renderer.cpp
tests/: CMakeLists.txt  test_AlgoBase.cpp  test_AlgoDecisionManager.cpp  test_AlgoInterface.cpp  test_AlgoLibraryLoader.cpp  test_AlgoLibraryLoaderTest.cpp  test_AlgoMetadata.cpp  test_AlgoNode.cpp  test_AlgoNodeProcess.cpp  test_AlgoPiepline.cpp  test_AlgoPipeline.cpp  test_AlgoRequest.cpp  test_AlgoSession.cpp  test_AlogNodeManager.cpp  test_ConfigParser.cpp  test_EventHandlerThread.cpp  test_Interface.cpp  test_RequestAndProcess.cpp  test_RequestMonitor.cpp  test_TaskQueue.cpp  test_ThreadWrapper.cpp  test_Watchdog.cpp  test_algo_base.cpp  test_common.h  test_main.cpp
